--- a/projects/chess/index.html
+++ b/projects/chess/index.html
@@ -156,37 +156,55 @@
         };
 
         // Initialize Tone.js for sounds
-        // Move sound: A crisp pluck sound
-        const moveSound = new Tone.PluckSynth({
-            attackNoise: 1, // Makes the attack sharper
-            dampening: 4000, // Controls the decay
-            resonance: 0.7, // Adds a bit of body
-            octaves: 0.5,
-            envelope: {
-                attack: 0.005,
-                decay: 0.1,
-                sustain: 0,
-                release: 0.05
-            }
-        }).toDestination();
-
-        // Capture sound: A punchier, percussive sound
-        const captureSound = new Tone.MembraneSynth({
-            pitchDecay: 0.02,
-            octaves: 8,
+        // Move sound: A wooden, soft click sound
+        const moveSound = new Tone.MembraneSynth({
+            pitchDecay: 0.05,
+            octaves: 4,
+            oscillator: { type: 'sine' },
             envelope: {
                 attack: 0.001,
-                decay: 0.4,
+                decay: 0.1,
                 sustain: 0.01,
-                release: 0.2
+                release: 0.3
             }
         }).toDestination();
 
-        // Check sound (unchanged, user liked this one)
-        const checkSound = new Tone.Synth().toDestination(); 
+        // Capture sound: A sharper, more aggressive hit
+        const captureSound = new Tone.MetalSynth({
+            frequency: 200,
+            envelope: {
+                attack: 0.001,
+                decay: 0.1,
+                sustain: 0.01,
+                release: 0.2
+            },
+            harmonicity: 5.1,
+            modulationIndex: 32,
+            resonance: 4000,
+            octaves: 1.5
+        }).toDestination();
 
-        // Mate sound (for sequencing two notes, keeping PolySynth for multiple notes)
-        const mateSound = new Tone.PolySynth().toDestination(); 
+        // Check sound: A tense, sharp alert sound
+        const checkSound = new Tone.Synth({
+            oscillator: { type: 'triangle' },
+            envelope: {
+                attack: 0.01,
+                decay: 0.1,
+                sustain: 0,
+                release: 0.3
+            }
+        }).toDestination();
+
+        // Mate sound: A dramatic, resonant tone
+        const mateSound = new Tone.PolySynth(Tone.Synth, {
+            oscillator: { type: 'sawtooth' },
+            envelope: {
+                attack: 0.01,
+                decay: 0.2,
+                sustain: 0.2,
+                release: 0.5
+            }
+        }).toDestination();
 
         // Function to play sounds
         function playSound(type) {
